Add deck route
