# server/src/routes/index.ts
@@ -1,5 +1,6 @@
 import express from 'express';
 import PingController from '../controllers/ping';
+import DeckRouter from './deck.routes';
 
 const router = express.Router();
 
@@ -9,5 +10,7 @@ router.get('/ping', async (_req, res) => {
 
     return res.send(response);
 });
+
+router.use('/decks', DeckRouter);
 
 export default router;
